Bug 487371 - Play button stop working after using pause button when having audio imported
Summary: Play button stop working after using pause button when having audio imported
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: 5.2.2
Platform: Microsoft Windows Microsoft Windows
: NOR major
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-05-22 14:15 UTC by cuong
Modified: 2024-06-21 11:17 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Behavior in action (2.41 MB, video/mp4)
2024-05-22 14:31 UTC, cuong
Details

Note You need to log in before you can comment on or make changes to this bug.
Description cuong 2024-05-22 14:15:32 UTC
SUMMARY
whenever using the pause function on the timeline, the play button wouldn't work until removing imported audio

STEPS TO REPRODUCE
1. import audio
2. Use the pause/play button

OBSERVED RESULT
Play button stop working, sometime immediately, sometime after 3-4 pause/play 

EXPECTED RESULT
Play button works after using pause button.

SOFTWARE/OS VERSIONS
Windows: 11

ADDITIONAL INFORMATION
Audio format: wav/mp3
Audio length: 1-10s
GPU acceleration on, direct3d 11 via angle. GPU model: radeon rx6600
Comment 1 cuong 2024-05-22 14:31:40 UTC
Created attachment 169702 [details]
Behavior in action
Comment 2 Dmitry Kazakov 2024-06-20 13:45:54 UTC
Git commit ba9b00213e79c0eeabd3d48a310bd035a69ac078 by Dmitry Kazakov.
Committed on 20/06/2024 at 13:45.
Pushed by dkazakov into branch 'master'.

Fix animation playback freezes when pausing past the end of audio

We should never set "pause" EOF-mode for the internal producer, since
it has rather weird effects on the producer's behavior, e.g. it sets
speed to null and clips to the last frame position.

The patch sets the EOF-mode to be "continue" all the time
Related: bug 478185

M  +16   -26   libs/ui/KisMLTProducerKrita.cpp

https://invent.kde.org/graphics/krita/-/commit/ba9b00213e79c0eeabd3d48a310bd035a69ac078
Comment 3 Dmitry Kazakov 2024-06-21 11:17:42 UTC
Git commit 304f293b15863d90dda6296044be044d387dde79 by Dmitry Kazakov.
Committed on 21/06/2024 at 11:16.
Pushed by dkazakov into branch 'krita/5.2'.

Fix animation playback freezes when pausing past the end of audio

We should never set "pause" EOF-mode for the internal producer, since
it has rather weird effects on the producer's behavior, e.g. it sets
speed to null and clips to the last frame position.

The patch sets the EOF-mode to be "continue" all the time
Related: bug 478185

M  +16   -26   libs/ui/KisMLTProducerKrita.cpp

https://invent.kde.org/graphics/krita/-/commit/304f293b15863d90dda6296044be044d387dde79