Fix animation playback freezes when pausing past the end of audio

We should never set "pause" EOF-mode for the internal producer, since
it has rather weird effects on the producer's behavior, e.g. it sets
speed to null and clips to the last frame position.

The patch sets the EOF-mode to be "continue" all the time

BUG:487371
BUG:478185