libs/ui/KisMLTProducerKrita.cpp
@@ -123,37 +123,20 @@ static int producer_get_frame(mlt_producer producer, mlt_frame_ptr frame, int in
     return retval;
 }
 
-static void updateInternalProducesEofStatus(mlt_producer producer_internal, int effectiveLimitEnabled)
-{
-    const char *effectiveEofMode = effectiveLimitEnabled ? "continue" : "pause";
-
-    mlt_properties internalProducerProps = MLT_PRODUCER_PROPERTIES(producer_internal);
-
-    const char *currentEofMode = mlt_properties_get(internalProducerProps, "eof");
-
-    if (!currentEofMode || strcmp(currentEofMode, effectiveEofMode) != 0) {
-        mlt_properties_set_string(internalProducerProps, "eof", effectiveEofMode);
-    }
-}
-
 static void producer_property_changed( mlt_service owner, mlt_producer self, mlt_event_data event_data)
 {
     const char *name = mlt_event_data_to_string(event_data);
     if (!name) return;
 
-    if (strcmp(name, "start_frame") == 0 ||
-        strcmp(name, "end_frame" ) == 0 ||
-        strcmp(name, "limit_enabled") == 0) {
-
-        mlt_properties props = MLT_PRODUCER_PROPERTIES(self);
-
-        const int effectiveLimitEnabled =
-            is_valid_range(mlt_properties_get_int(props, "start_frame"),
-                           mlt_properties_get_int(props, "end_frame")) &&
-            mlt_properties_get_int(props, "limit_enabled");
-
+    /**
+     * We don't use MLT's "speed" value for anything, but some
+     * MLT's functions may adjust the speed of the producer, e.g.
+     * when seeking. So we should keep the two values in sync.
+     */
+    if (strcmp(name, "_speed") == 0) {
+        const double speed = mlt_producer_get_speed(self);
         private_data* pdata = (private_data*)self->child;
-        updateInternalProducesEofStatus(pdata->producer_internal, effectiveLimitEnabled);
+        mlt_producer_set_speed(pdata->producer_internal, speed);
     }
 }
 
@@ -209,10 +192,17 @@ extern "C" void* producer_krita_init(mlt_profile profile,
 
         if (pdata->producer_internal) {
             mlt_producer_set_speed(pdata->producer_internal, 1.0);
+            mlt_properties internalProducerProps = MLT_PRODUCER_PROPERTIES(pdata->producer_internal);
+
+            /**
+             * We permanently set the EOF mode to "continue", because
+             * other modes have weird effects, like clipping the data when
+             * seeking or resetting the producer speed to null.
+             */
+            mlt_properties_set_string(internalProducerProps, "eof", "continue");
         }
 
         mlt_events_listen( producer_properties, producer, "property-changed", ( mlt_listener )producer_property_changed );
-        updateInternalProducesEofStatus(pdata->producer_internal, 0);
     }
 
     const bool INVALID_CONTEXT = !producer || !pdata || !pdata->producer_internal;
